cyllo_studio/static/src/css/style.css
/* ... */
.o_action{
    display: flex;
}

.o_action_manager .o_action {
    flex-direction: column;
}
/* List View */
/*@media (min-width: 1570px) {
    .o_list_table{
        width:
    }
}*/
.o_list_renderer .o_list_table {
    width:100%;
    max-width:inherit;
}
.o_action_manager.menuListFixed > :nth-child(2) {
        margin-left: 16% !important;
        flex-flow: column nowrap;
        overflow: hidden;
    }

.o-mail-ChatterContainer{
    position:relative !important;
}
.cy-mail-chatter{
    z-index:9 !important;

}

.rounded .o_searchview .o_searchview_autocomplete .o_menu_item a {
    color: #495052;
}

.rounded .o_cp_searchview .dropdown-item {
    color: #495052;
}

.cy-chatter-trash:hover{
    color:red;
    transform:scale(1.3,1.3);
    transition: all 0.5s ease;
}
.border-class-list {
    border:3px solid #9EA700 !important;
}

.cy-thead-list th.border-class-list {
    background-color: #f8f9e5 !important;/* Changed border into background */
    border: unset !important;
}
.primary-svg{
    fill: #9EA700 !important;

}

td.border-class-list {
    background-color: #f8f9e5;/* Changed border into background */
    border:unset !important;
}
/* HIDE invisible table cells by default */
.cy-studio-striped {
    display: none !important;
}

/* SHOW invisible table cells when checkbox is checked */
body.cy-show-invisible .cy-studio-striped {
    display: table-cell !important;
    visibility: visible !important;
    opacity: 1 !important;
}

/* For table cells (td), add a subtle left border instead of striped background */
body.cy-show-invisible td.cy-studio-striped {
    border-left: 3px solid #7c7c7c69 !important;
    background-color: transparent !important;
}
/* Search View */
.cy-content-header-icon {
    margin-bottom: 0.5rem;
    color: #9EA700;
    font-size: 1.2rem;
}
.cy-content-wrapper{
    display: flex;
    overflow-x: auto;
    flex-grow: 1;
    scroll-behavior: smooth;
    scrollbar-width: none;
}
.cy-field__box{
    width: 100%;
    padding: 0 1rem 1rem;
    height: 100%;
}
.cy-addable__list{
    padding: 0.5rem;
    border: 2px dashed #BCBBA7;
    border-radius: 4px;
}
.cy-drag-input_container{
    margin-top: 0.3rem;
    display: flex;
    border: 1px solid #dfdfdf;
    border-radius: 3px;
    overflow: hidden;
    padding: 0.3rem;
}
.cy-draginput--box {
    min-width: 58px;
    overflow: auto;
    background-color: #f5f5f5;
    margin: 0 0.2rem;
    border-radius: 3px;
    border: 1px solid #dfdfdf;
}
.cy-chatter-exist{
    opacity: 0.5;
    cursor: not-allowed !important;
}
.cy-drag_edit-btn {
    border: 0px solid #dfdfdf;
    padding: -1.25rem 0.5rem;
    border-radius: 2px;
    font-size: 13px;
}
.cy-drag_save {
    background-color: #fff !important;
    color: #9EA700 !important;
}
.cy-drag_delete {
    background-color: #fff !important;
    color: red !important;
    margin-left: 0.2rem;
}
.cy-field__box .cy-btn-primary {
    margin-bottom: 26px;
}

.cy-btn-primary {
    background-color: #9EA700;
    color: #fff;
    font-size: 13px;
    font-weight: 500;
    border: none;
    border-radius: 0.3rem;
    width: 100%;
    padding: 0.7rem 0.1rem;
}
.cy-studio-overlay{
    position: absolute;
    top: 16px;
    left: 0;
    width: 100%;
    height: 100vh !important;
    background-color: #000000a3;
    display: flex;
    justify-content: center;
    align-items: center;
    pointer-events: auto;
    color: white;
    font-size: 20px;
    z-index: 111 !important;
    transition: opacity 0.3s ease;
    margin-top: -16px;
}
.overlay-active {
    overflow: hidden !important;
}

.rounded.cy-navbar {
    padding: 8px !important;
    height: 54px !important;
}

/* Form View */

.o_form_view {
    background: #fff;
}

/* Activity dropdown */
.activity-add-custom-dropdown .d-flex{
    width: 87%;
}

.activity-add-custom-dropdown ul{
    width:13%;
    min-width:100px  !important;
}

.activity-edit-custom-dropdown .d-flex{
    width:50%
}

.activity-edit-custom-dropdown ul{
    min-width: 13% !important;
}

.custom-dropdown .custom-dropdown-text{
    border: 1px solid #828176;
}

/* Activity Add Button */
.cy-btn-add-activity{
    width: 53px;
    margin-top: 5%;
}

.cy-activity-btn-primary {
    background-color: #9EA700;
    color: #fff;
    font-size: 13px;
    font-weight: 500;
    border: none;
    border-radius: 0.3rem;
    width: 166%;
    padding: 0.7rem 0.1rem;
    font-weight: 500;
}

/* Activity Field border */
.cy-activity  .d-flex:hover{
    border-radius: 3px;
    border: 1px solid #9EA700;
    cursor: move !important;
}
.drop-here-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 300px;             /* Set height to 300px */
    width: 100%;
    font-size: 24px;           /* Adjust size as needed */
    color: #333;               /* Adjust color as needed */
    border: 2px dashed #ccc;   /* Optional: Add a border */
    text-align: center;
}

.cy-activity .d-inline-block:hover{
    border-radius: 3px;
    border: 1px solid #9EA700;
    cursor: move !important;
}
.cy-activity .d-block .d-block:hover{
    border-radius: 3px;
    border: 1px solid #9EA700;
    cursor: move !important;
}

/*.form-check-input{*/
/*    background-color:#505050 !important;*/
/*}*/

/* Activity Template */
.cy-activity-template  {
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 12px;
    z-index: 2;
}

/* Activity Icon */
.cy-activity-icon{
    font-size:17px;
}

.cy-activity-viewbody{
    position:relative;
}

/* Custom Dropdown Activity View */
.activity-add-custom-dropdown .d-flex {
    width: 247px !important;
}

.custom-dropdown.o-autocomplete . o-autocomplete--dropdown-menu {
    background-color: #ffffff;
    border: 1px solid #e0e0e0;
    border-top: none;
    min-width: 209px !important;
}

.activity-edit-custom-dropdown .d-flex {
    width: 209px  !important;
}
/* ... */

